2008-02-19  Pavel Roskin  <proski@gnu.org>

	* doc/hu/mc.1.in: Fix description for M-u and M-H.  Reported by
	Bozo Lajos.

2008-01-06  Roland Illig  <roland.illig@gmx.de>

	* FAQ: Answered the slow startup related to old Samba code.
	(Closes: #21959)

2007-10-19  Pavel Tsekov  <ptsekov@gmx.net>

	* NEWS: Update for 4.6.2.

2007-10-11  Pavel Tsekov  <ptsekov@gmx.net>

	* configure.ac: Determine the size of `long', `long long' and
	off_t.

2007-09-26  Pavel Tsekov  <ptsekov@gmx.net>

	* NEWS: Revert last change - it is invalid.

2007-09-24  Pavel Tsekov  <ptsekov@gmx.net>

	* m4/codeset.m4: Update to serial #2.
	* m4/fsusage.m4: Update to serial #23.
	* m4/iconv.m4: Update to serial #AM6.
	* m4/intdiv0.m4: Update from gnulib.
	* m4/intmax.m4: Update to serial #3.
	* m4/inttypes-pri.m4: Update to serial #4.
	* m4/inttypes_h.m4: Update to serial #7.
	* m4/lib-link.m4: Update to serial #13.
	* m4/lib-prefix.m4: Update to serial #5.
	* m4/longlong.m4: Update to serial #10.
	* m4/onceonly.m4: Update to serial #4.
	* m4/printf-posix.m4: Update to serial #3.
	* m4/size_max.m4: Update to serial #6.
	* m4/stdint_h.m4: Update to serial #6.
	* m4/ulonglong.m4: Update to serial #6.
	* m4/wint_t.m4: Update to serial #2.

2007-09-24  Pavel Tsekov  <ptsekov@gmx.net>

	* doc/mcedit.1.in: Update the version number to 4.6.2-pre1.
	* doc/mcview.1.in: Ditto.
	* doc/mcserv.8.in: Ditto.

2007-09-24  Pavel Tsekov  <ptsekov@gmx.net>

	* FAQ: Update MC's homepage url.
	* README: Ditto.
	* doc/mc.1.in: Ditto.
	* doc/mcedit.1.in: Ditto.
	* doc/mcserv.8.in: Ditto.
	* doc/mcview.1.in: Ditto.
	* doc/es/mc.1.in: Ditto.
	* doc/hu/mc.1.in: Ditto.
	* doc/it/mc.1.in: Ditto.
	* doc/pl/mc.1.in: Ditto.
	* doc/ru/mc.1.in: Ditto.
	* doc/sr/mc.1.in: Ditto.
	* doc/sr/mcserv.8.in: Ditto.

2007-09-10  Pavel Tsekov  <ptsekov@gmx.net>

	* configure.ac: Update the version number to 4.6.2-pre1.
	* doc/mc.1.in: Likewise.

2007-01-13  Pavel Tsekov  <ptsekov@gmx.net>
